--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@ footer{
     width: 1000px;
     height: 400px;
     border: 2px solid var(--secondary-dark);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     display: flex;
     flex-direction: row;
 }
