--- a/styles.css
+++ b/styles.css
@@ -170,6 +170,23 @@ footer{
 .project-text-container {
     display: flex;
     flex-direction: column;
-    width: 40%;
-    
+    width: 40%;    
+}
+
+.icons-container {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    height: 50px;
+}
+
+.lang-logo {
+    width: 50px;
+    height: 50px;
+    padding:5px;
+}
+
+#metronome-img {
+    width: 100%;
+    height: 100%;
 }
